@@ -150,6 +150,8 @@ Version 2.0-dev (CVS)
 
 - Add support for reading Google Mercator (GDAL #4115) (but not writing!)
 
+- Improve TABBasename() for filenames with extra dots in them (GDAL #4123).
+
 
 Version 1.7.0-beta1 (2007-02-29)
 --------------------------------
@@ -1011,5 +1013,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.258 2011-06-11 00:35:00 fwarmerdam Exp $
+$Id: HISTORY.TXT,v 1.259 2011-06-16 15:53:12 fwarmerdam Exp $
 ------------
